Mon Jun 29 22:50:10 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* Doxyfile.in: removed. merged into template/Doxyfile.template

	* configure.in: new checking for dot and doxygen.

	* template/Doxyfile.template: merged with Doxyfile.in.
	  configured some options.

	* common.mk (capi): use $(DOXYGEN) instead of "doxygen".
	  (Doxyfile): removed a duplicate entry in the dependency.

Mon Jun 29 21:01:31 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c (nucomp_expt): checks exactness.

Mon Jun 29 20:29:11 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* rational.c (float_to_r): always returns rational.

Mon Jun 29 18:55:55 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dln.c (dln_find_1): fix for files with dots.  [ruby-dev:38588]

Mon Jun 29 17:14:31 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_expand_path): should copy original encoding.
	  [ruby-dev:38612]

Wed May 13 22:34:31 2009  Narihiro Nakamura  <authorNari@gmail.com>

	* gc.c: add longlife garbage collection. [ruby-dev:38423]
	  (NORMAL_HEAPS_USED): new macro.
	  (LONGLIFE_ALLOCATE_HEAPS_MIN): ditto.
	  (add_longlife_heaps_slot): new function.
	  (rb_newobj_from_longlife_heap): ditto.
	  (rb_newobj_longlife): ditto.
	  (rb_node_newnode_longlife): ditto.
	  (rb_gc_write_barrier): ditto.
	  (remembered_set_recycle): ditto.
	  (rb_gc_mark_remembered_set): ditto.
	  (clear_mark_longlife_heaps): ditto.
	  (gc_sweep_for_longlife): ditto.
	  (assign_heap_slot): new argumnent to longlife heaps slot.
	  (add_freelist): ditto.
	  (gc_sweep): avoid lonlife heap slot. set longlife_collection
	  flag at add heap.
	  (rb_gc_force_recycle): avoid mark object and remembered_set
	  object.
	  (garbage_collect): add longlife collection.
	  (rb_gc_start): invoke longlife collection.
	  (gc_profile_record_get): for longlife collction profile.
	  (gc_profile_result): ditto.

	* include/ruby/intern.h (rb_gc_write_barrier): declared.

	* include/ruby/ruby.h (FL_REMEMBERED_SET): renamed from FL_RESERVED.
