@@ -4,8 +4,10 @@ module CMath
 
   alias exp! exp
   alias log! log
+  alias log2! log2
   alias log10! log10
   alias sqrt! sqrt
+  alias cbrt! cbrt
 
   alias sin! sin
   alias cos! cos
@@ -47,6 +49,14 @@ module CMath
     end
   end
 
+  def log2(z)
+    if z.real? and z >= 0
+      log2!(z)
+    else
+      log(z) / log!(2)
+    end
+  end
+
   def log10(z)
     if z.real? and z >= 0
       log10!(z)
@@ -71,6 +81,15 @@ module CMath
 	x = z.real
 	Complex(sqrt!((r + x) / 2), sqrt!((r - x) / 2))
       end
+    end
+  end
+
+  def cbrt(z)
+    if z.real? and z >= 0
+      cbrt!(z)
+    else
+#      exp(log(z) * (1.0/3))
+      Complex(z) ** (1.0/3)
     end
   end
 
@@ -186,10 +205,14 @@ module CMath
   module_function :exp
   module_function :log!
   module_function :log
+  module_function :log2!
+  module_function :log2
   module_function :log10!
   module_function :log10
   module_function :sqrt!
   module_function :sqrt
+  module_function :cbrt!
+  module_function :cbrt
 
   module_function :sin!
   module_function :sin
@@ -221,8 +244,6 @@ module CMath
   module_function :atanh!
   module_function :atanh
 
-  module_function :log2
-  module_function :cbrt
   module_function :frexp
   module_function :ldexp
   module_function :hypot
